User Page - User Fields

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  camera: ^0.9.6
+  path_provider: ^2.0.10
+  image_picker: 
+  path:
 
 
   # The following adds the Cupertino Icons font to your application.
